// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders empty view with no tab selected 1`] = `
<div
  className="scene mainScene"
>
  <div
    className="header"
  >
    <button
      className="left"
      onClick={[MockFunction]}
    >
      <svg
        height="16"
        width="16"
      >
        <path
          d="m2 2c-0.554 0-1 0.446-1 1s0.446 1 1 1h12c0.554 0 1-0.446 1-1s-0.446-1-1-1h-12zm0 5c-0.554 0-1 0.446-1 1s0.446 1 1 1h12c0.554 0 1-0.446 1-1s-0.446-1-1-1h-12zm0 5c-0.554 0-1 0.446-1 1s0.446 1 1 1h12c0.554 0 1-0.446 1-1s-0.446-1-1-1h-12z"
        />
      </svg>
    </button>
    <h2 />
    <button
      className="create"
      onClick={[Function]}
    >
      +
    </button>
  </div>
  <div
    className="content"
    id="main-content"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="load-error"
    >
      <img
        alt=""
        src="logo.png"
      />
      <h2>
        Grouptabs
      </h2>
      <p>
        Error: Tab data missing. Are you offline? Try refreshing.
      </p>
      <button
        className="create"
        onClick={[Function]}
      >
        OK
      </button>
    </div>
  </div>
</div>
`;

exports[`renders missing tab info error 1`] = `
<div
  className="scene mainScene"
>
  <div
    className="header"
  >
    <button
      className="left"
      onClick={[MockFunction]}
    >
      <svg
        height="16"
        width="16"
      >
        <path
          d="m2 2c-0.554 0-1 0.446-1 1s0.446 1 1 1h12c0.554 0 1-0.446 1-1s-0.446-1-1-1h-12zm0 5c-0.554 0-1 0.446-1 1s0.446 1 1 1h12c0.554 0 1-0.446 1-1s-0.446-1-1-1h-12zm0 5c-0.554 0-1 0.446-1 1s0.446 1 1 1h12c0.554 0 1-0.446 1-1s-0.446-1-1-1h-12z"
        />
      </svg>
    </button>
    <h2 />
    <button
      className="create"
      onClick={[Function]}
    >
      +
    </button>
  </div>
  <div
    className="content"
    id="main-content"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="load-error"
    >
      <img
        alt=""
        src="logo.png"
      />
      <h2>
        Grouptabs
      </h2>
      <p>
        Error: Tab data missing. Are you offline? Try refreshing.
      </p>
      <button
        className="create"
        onClick={[Function]}
      >
        OK
      </button>
    </div>
  </div>
</div>
`;

exports[`renders summary and transaction list 1`] = `
<div
  className="scene mainScene"
>
  <div
    className="header"
  >
    <button
      className="left"
      onClick={[MockFunction]}
    >
      <svg
        height="16"
        width="16"
      >
        <path
          d="m2 2c-0.554 0-1 0.446-1 1s0.446 1 1 1h12c0.554 0 1-0.446 1-1s-0.446-1-1-1h-12zm0 5c-0.554 0-1 0.446-1 1s0.446 1 1 1h12c0.554 0 1-0.446 1-1s-0.446-1-1-1h-12zm0 5c-0.554 0-1 0.446-1 1s0.446 1 1 1h12c0.554 0 1-0.446 1-1s-0.446-1-1-1h-12z"
        />
      </svg>
    </button>
    <h2>
      My Tab
    </h2>
    <button
      className="create"
      onClick={[Function]}
    >
      +
    </button>
  </div>
  <div
    className="content"
    id="main-content"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="row"
    >
      <table
        className="summary"
      >
        <tbody>
          <tr>
            <th
              className="account"
            >
              Jan
              <div
                className="summary-bar negative"
                style={
                  Object {
                    "width": "calc(100% - 24px)",
                  }
                }
              />
            </th>
            <td
              className="amount"
            >
              <span
                className="amount-integer"
              >
                -11
              </span>
              <small
                className="amount-fraction"
              >
                70
              </small>
            </td>
          </tr>
          <tr>
            <th
              className="account"
            >
              Martin
              <div
                className="summary-bar positive"
                style={
                  Object {
                    "width": "calc(100% - 24px)",
                  }
                }
              />
            </th>
            <td
              className="amount"
            >
              <span
                className="amount-integer"
              >
                11
              </span>
              <small
                className="amount-fraction"
              >
                70
              </small>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      className="row"
    >
      <div
        id="transactions"
      >
        <div
          className="dategroup"
        >
          <div
            className="date"
          >
            9/20/2020
          </div>
          <div
            className="transaction list-item-with-arrow"
            onClick={[Function]}
          >
            <table>
              <tbody>
                <tr>
                  <td
                    className="title"
                  >
                    Gummibärchen
                    <div
                      className="payments"
                    >
                      <strong>
                        Martin: 22.8, 
                      </strong>
                      Jan
                    </div>
                  </td>
                  <td
                    className="total"
                  >
                    <span
                      className="amount-integer"
                    >
                      22
                    </span>
                    <small
                      className="amount-fraction"
                    >
                      80
                    </small>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
      <div
        className="total-sum"
      >
        Total Spending: 
        <span
          className="amount-integer"
        >
          22
        </span>
        <small
          className="amount-fraction"
        >
          80
        </small>
      </div>
    </div>
    <div
      className="share-info"
    >
      <p>
        Share this tab ID for collaboration with others:
        <br />
        <code>
          2
        </code>
      </p>
    </div>
  </div>
</div>
`;

exports[`renders tab with no transactions 1`] = `
<div
  className="scene mainScene"
>
  <div
    className="header"
  >
    <button
      className="left"
      onClick={[MockFunction]}
    >
      <svg
        height="16"
        width="16"
      >
        <path
          d="m2 2c-0.554 0-1 0.446-1 1s0.446 1 1 1h12c0.554 0 1-0.446 1-1s-0.446-1-1-1h-12zm0 5c-0.554 0-1 0.446-1 1s0.446 1 1 1h12c0.554 0 1-0.446 1-1s-0.446-1-1-1h-12zm0 5c-0.554 0-1 0.446-1 1s0.446 1 1 1h12c0.554 0 1-0.446 1-1s-0.446-1-1-1h-12z"
        />
      </svg>
    </button>
    <h2>
      My Tab
    </h2>
    <button
      className="create"
      onClick={[Function]}
    >
      +
    </button>
  </div>
  <div
    className="content"
    id="main-content"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="empty-info"
    >
      <p>
        A tab consists of transactions. When you add a transaction you also define the people that are part of it, the participants.
      </p>
      <p>
        Start by adding your first transaction:
      </p>
      <div
        className="row"
      >
        <button
          className="full-width create"
          onClick={[Function]}
        >
          Add transaction
        </button>
      </div>
    </div>
    <div
      className="share-info"
    >
      <p>
        Share this tab ID for collaboration with others:
        <br />
        <code>
          6
        </code>
      </p>
    </div>
  </div>
</div>
`;
